--- a/portfolio/whosdown.html
+++ b/portfolio/whosdown.html
@@ -159,25 +159,25 @@
     <div class="header">
       <div class="sidenav">
         <ul>
-          <a href="/index.html" style="text-decoration: none"
+          <a href="./index.html" style="text-decoration: none"
             ><img
-              src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/namelogo.png?v=1648787732597"
+              src="./resource/namelogo.png"
               alt="logo"
               style="100%"
           /></a>
 
           <li>
-            <a href="/portfolio/works.html" style="text-decoration: none"
+            <a href="./portfolio/works.html" style="text-decoration: none"
               ><h1>WORKS</h1></a
             >
           </li>
 
           <li>
-            <a href="/bio.html" style="text-decoration: none"><h1>ABOUT</h1></a>
+            <a href="./bio.html" style="text-decoration: none"><h1>ABOUT</h1></a>
           </li>
 
           <li>
-            <a href="/bio.html" style="text-decoration: none"
+            <a href="https://drive.google.com/file/d/1yKP6Wr5qEm62AT5oiXWWEtA9xNwFP_9L/view?usp=sharing" style="text-decoration: none"
               ><h1>RESUME</h1></a
             >
           </li>
@@ -197,13 +197,13 @@
     <main role="main" class="container">
       <div class="section">
            <img
-              src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/whosline.png?v=1649148795263"
+              src="./resource/whosline.png"
               alt="portfolio line"
               width="100%"
                  />
         <div class="row">
           <img
-            src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/wdpage.jpg?v=1649140207265"
+            src="./resource/wdpage.jpg"
             width="100%"
           />
         </div></div>
@@ -214,7 +214,7 @@
           </p>
         <a href="https://apps.apple.com/us/app/whosdown/id1458204817" style="text-decoration: none"
               ><img
-          src="https://cdn.glitch.global/0ec6ce21-231c-4146-8e5a-e5718f5a22f1/WhosDownIcon-withString-yellow.png?v=1649140320926" width="30%"
+          src="./resource/whosdownapp.png" width="30%"
           alt="whosdown"
                     /></a>
         
