--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
       <div class="section">
         <div class="row">
           <img
-            src="./resource/landing%20img.gif"
+            src="./resource/landing.gif"
             width="100%"
           />
         </div>
@@ -236,7 +236,7 @@
             <div class="column">
               <a href="./portfolio/gif.html" style="text-decoration: none"
                 ><img
-                  src="./resource/gif_thumb%20copy.png"
+                  src="./resource/gif_thumb.png"
                   width="100%"
                   alt="gif"
               /></a>
