--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
           /></a>
 
           <li>
-            <a href="./portfolio/works.html" style="text-decoration: none"
+            <a href="./works.html" style="text-decoration: none"
               ><h1>WORKS</h1></a
             >
           </li>
@@ -214,7 +214,7 @@
 
           <div class="row">
             <div class="column">
-              <a href="./portfolio/glitch.html" style="text-decoration: none">
+              <a href="./glitch.html" style="text-decoration: none">
                 <img
                   src="./resource/glitch_thumb.png"
                   width="100%"
@@ -222,7 +222,7 @@
               /></a>
             </div>
             <div class="column">
-              <a href="./portfolio/video.html" style="text-decoration: none">
+              <a href="./video.html" style="text-decoration: none">
                 <img
                   src="./resource/video_thumb.png"
                   width="100%"
@@ -234,7 +234,7 @@
         <div class="section">
           <div class="row">
             <div class="column">
-              <a href="./portfolio/gif.html" style="text-decoration: none"
+              <a href="./gif.html" style="text-decoration: none"
                 ><img
                   src="./resource/gif_thumb.png"
                   width="100%"
@@ -254,7 +254,7 @@
         <div class="section">
           <div class="row">
             <div class="column">
-              <a href="./portfolio/whosdown.html" style="text-decoration: none">
+              <a href="./whosdown.html" style="text-decoration: none">
                 <img
                   src="./resource/whosdown.png"
                   width="100%"
@@ -262,7 +262,7 @@
               /></a>
             </div>
             <div class="column">
-              <a href="./portfolio/cow.html" style="text-decoration: none">
+              <a href="./cow.html" style="text-decoration: none">
                 <img
                   src="./resource/cow_thumb2.png"
                   width="100%"
@@ -274,7 +274,7 @@
         <div class="section">
           <div class="row">
             <div class="column">
-              <a href="./portfolio/drawings.html" style="text-decoration: none">
+              <a href="./drawings.html" style="text-decoration: none">
                 <img
                   src="./resource/drawing_thumb.png"
                   width="100%"
