--- a/drawings.html
+++ b/drawings.html
@@ -164,7 +164,7 @@
           /></a>
 
           <li>
-            <a href="./portfolio/works.html" style="text-decoration: none"
+            <a href="./works.html" style="text-decoration: none"
               ><h1>WORKS</h1></a
             >
           </li>
