--- a/gif.html
+++ b/gif.html
@@ -152,6 +152,9 @@
         margin-left: 160px;
         padding-left: 160px;
       }
+      .gif {
+        width: 25%;
+      }
     }
   </style>
 
@@ -167,7 +170,7 @@
           /></a>
 
           <li>
-            <a href="./portfolio/works.html" style="text-decoration: none"
+            <a href="./works.html" style="text-decoration: none"
               ><h1>WORKS</h1></a
             >
           </li>
