--- a/works.html
+++ b/works.html
@@ -207,14 +207,14 @@
          
     <div class="row">
       <div class="column">
-       <a href="./portfolio/glitch.html" style="text-decoration: none"
+       <a href="./glitch.html" style="text-decoration: none"
               > <img
           src="./resource/glitch_thumb.png"  width="100%"
           alt="glitch"
                      /></a>
          </div>
       <div class="column">
-       <a href="./portfolio/video.html" style="text-decoration: none"
+       <a href="./video.html" style="text-decoration: none"
               > <img
           src="./resource/video_thumb.png" width="100%"
           alt="video"
@@ -226,14 +226,14 @@
 
     <div class="row">
       <div class="column">
-        <a href="./portfolio/gif.html" style="text-decoration: none"
+        <a href="./gif.html" style="text-decoration: none"
               ><img
           src="./resource/gif_thumb.png" width="100%"
           alt="gif"
                     /></a>
       </div>
       <div class="column">
-       <a href="./portfolio/website.html" style="text-decoration: none"
+       <a href="./website.html" style="text-decoration: none"
               > <img
           src="./resource/website_thumb.png" width="100%"
           alt="website"
@@ -245,7 +245,7 @@
 
       <div class="row">
       <div class="column">
-       <a href="./portfolio/whosdown.html" style="text-decoration: none"
+       <a href="./whosdown.html" style="text-decoration: none"
               > <img
           src="./resource/whosdown.png" width="100%"
           alt="whosdown"
@@ -253,7 +253,7 @@
         
       </div>
       <div class="column">
-       <a href="./portfolio/cow.html" style="text-decoration: none"
+       <a href="./cow.html" style="text-decoration: none"
               > <img
           src="./resource/cow_thumb2.png" width="100%"
           alt="cow"
@@ -265,7 +265,7 @@
 
          <div class="row">
       <div class="column">
-       <a href="./portfolio/drawings.html" style="text-decoration: none"
+       <a href="./drawings.html" style="text-decoration: none"
               > <img
           src="./resource/drawing_thumb.png" width="100%"
           alt="drawing"
