--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
               /></a>
             </div>
             <div class="column">
-              <a href="./portfolio/website.html" style="text-decoration: none">
+              <a href="./website.html" style="text-decoration: none">
                 <img
                   src="./resource/website_thumb.png"
                   width="100%"
