--- a/website.html
+++ b/website.html
@@ -207,6 +207,7 @@
             src="./resource/click.png"
             width="100%"
                      /></a>
+         <a href="https://soin0430.github.io/starbucks.redo/"> <p> https://soin0430.github.io/starbucks.redo/ </p> </a>
         </div>
         
         <div class="row">
