--- a/index.html
+++ b/index.html
@@ -214,17 +214,17 @@
 
           <div class="row">
             <div class="column">
-              <a href="./glitch.html" style="text-decoration: none">
+              <a href="./uiux.html" style="text-decoration: none">
                 <img
-                  src="./resource/glitch_thumb.png"
+                  src="./resource/uiux.png"
                   width="100%"
                   alt="glitch"
               /></a>
             </div>
             <div class="column">
-              <a href="./video.html" style="text-decoration: none">
+              <a href="./cow.html" style="text-decoration: none">
                 <img
-                  src="./resource/video_thumb.png"
+                  src="./resource/cow_thumb2.png"
                   width="100%"
                   alt="video"
               /></a>
@@ -234,9 +234,9 @@
         <div class="section">
           <div class="row">
             <div class="column">
-              <a href="./gif.html" style="text-decoration: none"
+              <a href="./whosdown.html" style="text-decoration: none"
                 ><img
-                  src="./resource/gif_thumb.png"
+                  src="./resource/whosdown.png"
                   width="100%"
                   alt="gif"
               /></a>
@@ -254,35 +254,24 @@
         <div class="section">
           <div class="row">
             <div class="column">
-              <a href="./whosdown.html" style="text-decoration: none">
+              <a href="./video.html" style="text-decoration: none">
                 <img
-                  src="./resource/whosdown.png"
+                  src="./resource/video_thumb.png"
                   width="100%"
                   alt="whosdown"
               /></a>
             </div>
             <div class="column">
-              <a href="./cow.html" style="text-decoration: none">
+              <a href="./drawings.html" style="text-decoration: none">
                 <img
-                  src="./resource/cow_thumb2.png"
+                  src="./resource/drawing_thumb.png"
                   width="100%"
                   alt="cow"
               /></a>
             </div>
           </div>
         </div>
-        <div class="section">
-          <div class="row">
-            <div class="column">
-              <a href="./drawings.html" style="text-decoration: none">
-                <img
-                  src="./resource/drawing_thumb.png"
-                  width="100%"
-                  alt="drawing"
-              /></a>
-            </div>
-          </div>
-        </div>
+       
       </div>
     </main>
 
