--- a/uiux.html
+++ b/uiux.html
@@ -205,10 +205,7 @@
               width="100%"
                  />
         <div class="row">
-          <img
-            src="./resource/campfire.gif"
-            width="100%"
-          />
+          <iframe src="https://soin0430.github.io/uiuxquiz/" name="iframe_a" height="800px" width="100%" title="Iframe Example"></iframe>
         </div>
         
       </div>
