--- a/cow.html
+++ b/cow.html
@@ -209,6 +209,10 @@
             src="./resource/cow1.jpg"
             width="100%"
           />
+            <img
+            src="./resource/extra.jpg"
+            width="100%"
+          />
         </div></div></div>
        
     </main>
