--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
       href="https://fonts.googleapis.com/css2?family=Vidaloka&display=swap"
       rel="stylesheet"
     />
+    <link 
+      href="https://fonts.googleapis.com/css2?family=Karla:wght@300&display=swap" 
+      rel="stylesheet"
+          />
+    
 
     <!-- Additional Style Rules-->
 
@@ -96,6 +101,7 @@
 
     p {
       font-style: normal;
+      font-family: "Karla", sans-serif;
     }
 
     @media screen and (max-width: 600px) {
