--- a/index.html
+++ b/index.html
@@ -204,7 +204,14 @@
   <body>
     <main role="main" class="container">
       <div class="section">
+          <div class="row">
+            <p>
+              
+          <div class="column">
+            </div>
+        </div>
         <div class="row">
+          <div class="column">
           <img
             src="./resource/landing.gif"
             width="100%"
@@ -217,9 +224,10 @@
             alt="portfolio line"
             width="100%"
           />
-
+          </div>
+           <div class="section">
           <div class="row">
-            <div class="column">
+
               <a href="./uiux.html" style="text-decoration: none">
                 <img
                   src="./resource/uiux.png"
@@ -227,14 +235,7 @@
                   alt="glitch"
               /></a>
             </div>
-            <div class="column">
-              <a href="./cow.html" style="text-decoration: none">
-                <img
-                  src="./resource/cow_thumb2.png"
-                  width="100%"
-                  alt="video"
-              /></a>
-            </div>
+           
           </div>
         </div>
         <div class="section">
