--- a/index.html
+++ b/index.html
@@ -159,6 +159,14 @@
         width: 500px;
       }
     }
+    footer{
+    background-color: #000000;
+    width: 100%;
+    font-size: 16px;
+    text-align: left;
+    font-weight: bold;
+}
+
   </style>
 
   <header>
@@ -290,6 +298,7 @@
     ></script>
   </body>
   <footer>
-    <p>© Copyright Soin An. All Rights Reserved</p>
+    <p>Thank you for scrolling down. Here's My <a href="https://drive.google.com/file/d/1yKP6Wr5qEm62AT5oiXWWEtA9xNwFP_9L/view?usp=sharing"
+              style="text-decoration: none">resume!</a><br>soin.an@sjsu.edu<br>© Copyright Soin An. All Rights Reserved</p>
   </footer>
 </html>
