--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         width: 500px;
       }
     }
-    footer{
+    .footer{
     background-color: #000000;
     width: 100%;
     font-size: 16px;
@@ -298,8 +298,9 @@
       crossorigin="anonymous"
     ></script>
   </body>
-  <footer>
+  <footer>        <div class="section">
+
     <p>Thank you for scrolling down. Here's My <a href="https://drive.google.com/file/d/1yKP6Wr5qEm62AT5oiXWWEtA9xNwFP_9L/view?usp=sharing"
               style="text-decoration: none">resume!</a><br>soin.an@sjsu.edu<br>© Copyright Soin An. All Rights Reserved</p>
-  </footer>
+    </div> </footer>
 </html>
