--- a/index.html
+++ b/index.html
@@ -160,12 +160,16 @@
       }
     }
     .footer{
-    background-color: #000000;
+    background-color: #efefef;
     width: 100%;
+    padding: 25px;
+    border: 25px;
+    margin: 25px;
+    border-radius: 15px;
     font-size: 16px;
     text-align: left;
     font-weight: bold;
-      font-color: #ffffff;
+       font-family: "Karla", sans-serif;
 }
 
   </style>
