--- a/index.html
+++ b/index.html
@@ -93,15 +93,25 @@
 
     h1 {
       font-style: normal;
-      font-family: "Vidaloka", serif;
-      font-weight: 500;
+      font-family: "Karla", serif;
+      font-weight: 800;
       text-align: left;
       font-size: 18px;
     }
-
+    h6 {
+      font-style: normal;
+      font-family: "Karla", serif;
+      font-color: #b10096;
+      font-weight: 400;
+      text-align: left;
+      font-size: 12px;
+    }
     p {
       font-style: normal;
       font-family: "Karla", sans-serif;
+      font-weight: 400;
+      text-align: left;
+      font-size: 14px;
     }
 
     @media screen and (max-width: 600px) {
@@ -302,9 +312,10 @@
       crossorigin="anonymous"
     ></script>
   </body>
-  <footer>        <div class="section">
+<footer>
+  <div class="footer">       
 
     <p>Thank you for scrolling down. Here's My <a href="https://drive.google.com/file/d/1yKP6Wr5qEm62AT5oiXWWEtA9xNwFP_9L/view?usp=sharing"
-              style="text-decoration: none">resume!</a><br>soin.an@sjsu.edu<br>© Copyright Soin An. All Rights Reserved</p>
-    </div> </footer>
+              style="text-decoration: none">Resume!</a><br>soin.an@sjsu.edu<br>© Copyright Soin An. All Rights Reserved</p>
+  </div> </footer>
 </html>
