--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
       }
     }
     .footer{
-    background-color: #efefef;
+    background-color: #898989;
     width: 100%;
     padding: 25px;
     border: 25px;
@@ -315,7 +315,7 @@
 <footer>
   <div class="footer">       
 
-    <p>Thank you for scrolling down. Here's My <a href="https://drive.google.com/file/d/1yKP6Wr5qEm62AT5oiXWWEtA9xNwFP_9L/view?usp=sharing"
-              style="text-decoration: none">Resume!</a><br>soin.an@sjsu.edu<br>© Copyright Soin An. All Rights Reserved</p>
+    <h1>Thank you for scrolling down. Here's My <a href="https://drive.google.com/file/d/1yKP6Wr5qEm62AT5oiXWWEtA9xNwFP_9L/view?usp=sharing"
+              style="text-decoration: none">Resume!</a><br>soin.an@sjsu.edu<br>© Copyright Soin An. All Rights Reserved</h1>
   </div> </footer>
 </html>
