--- a/index.html
+++ b/index.html
@@ -170,12 +170,11 @@
       }
     }
     .footer{
-    background-color: #898989;
+    background-color: #EBECF0;
     width: 100%;
     padding: 25px;
-    border: 25px;
-    margin: 25px;
-    border-radius: 15px;
+ 
+    border-radius: 5px;
     font-size: 16px;
     text-align: left;
     font-weight: bold;
@@ -230,6 +229,7 @@
           <div class="row">
             
           <div class="column">
+            <h1>Hello, My name is Soin An. </h1>
             <p>
               hello</p>
             </div>
