--- a/index.html
+++ b/index.html
@@ -329,8 +329,16 @@
           <div class="row">
             
           <div class="column">
-           <h1>Thank you for scrolling down. Here's My <a href="https://drive.google.com/file/d/1yKP6Wr5qEm62AT5oiXWWEtA9xNwFP_9L/view?usp=sharing"
-              style="text-decoration: none">Resume!</a><br>soin.an@sjsu.edu<br>© Copyright Soin An. All Rights Reserved</h1>
-   </div></div></div>
+           <p>Thank you for scrolling down. Here's My<a href="https://drive.google.com/file/d/1yKP6Wr5qEm62AT5oiXWWEtA9xNwFP_9L/view?usp=sharing"
+              style="text-decoration: none">Resume!</a></p><br><h3>soin.an@sjsu.edu<br>© Copyright Soin An. All Rights Reserved</h3>
+   </div><div class="column">
+            <p><a href="https://drive.google.com/file/d/1yKP6Wr5qEm62AT5oiXWWEtA9xNwFP_9L/view?usp=sharing"
+              style="text-decoration: none">Email</a>
+            <a href="https://drive.google.com/file/d/1yKP6Wr5qEm62AT5oiXWWEtA9xNwFP_9L/view?usp=sharing"
+              style="text-decoration: none">LinkedIn</a>
+            <a href="https://drive.google.com/file/d/1yKP6Wr5qEm62AT5oiXWWEtA9xNwFP_9L/view?usp=sharing"
+              style="text-decoration: none">Instagram</a>
+            </p>
+            </div></div></div>
   </div> </footer>
 </html>
