--- a/index.html
+++ b/index.html
@@ -182,8 +182,7 @@
     .footer{
     background-color: #EBECF0;
     width: 100%;
-    padding: 25px;
- 
+
     border-radius: 5px;
     font-size: 16px;
     text-align: left;
@@ -239,7 +238,8 @@
           <div class="row">
             
           <div class="column">
-            <h1>Hello, My name is Soin An. </h1>
+            <span style="font-size:27px;">
+              <h1>Hello, My name is Soin An. </h1></span>
             <p>
               hello</p> <h2>hello</h2>
             </div>
@@ -329,7 +329,7 @@
           <div class="row">
             
           <div class="column">
-           <p>Thank you for scrolling down. Here's My<a href="https://drive.google.com/file/d/1yKP6Wr5qEm62AT5oiXWWEtA9xNwFP_9L/view?usp=sharing"
+           <p>Thank you for scrolling down. Here's My <a href="https://drive.google.com/file/d/1yKP6Wr5qEm62AT5oiXWWEtA9xNwFP_9L/view?usp=sharing"
               style="text-decoration: none">Resume!</a></p><br><h3>soin.an@sjsu.edu<br>© Copyright Soin An. All Rights Reserved</h3>
    </div><div class="column">
             <p><a href="https://drive.google.com/file/d/1yKP6Wr5qEm62AT5oiXWWEtA9xNwFP_9L/view?usp=sharing"
