--- a/index.html
+++ b/index.html
@@ -94,9 +94,8 @@
     h1 {
       font-style: bold;
       font-family: "Karla", serif;
-      font-weight: 800;
+      font-weight: 1000;
       text-align: left;
-      font-size: 24px;
     }
     h2 {
       font-style: normal;
@@ -104,7 +103,6 @@
       font-color: #b10096;
       font-weight: 400;
       text-align: left;
-      font-size: 12px;
     }
     p {
       font-style: normal;
@@ -184,9 +182,8 @@
     width: 100%;
 
     border-radius: 5px;
-    font-size: 16px;
     text-align: left;
-    font-weight: bold;
+    font-weight: normal;
        font-family: "Karla", sans-serif;
 }
 
@@ -330,7 +327,7 @@
             
           <div class="column">
            <p>Thank you for scrolling down. Here's My <a href="https://drive.google.com/file/d/1yKP6Wr5qEm62AT5oiXWWEtA9xNwFP_9L/view?usp=sharing"
-              style="text-decoration: none">Resume!</a></p><br><h3>soin.an@sjsu.edu<br>© Copyright Soin An. All Rights Reserved</h3>
+              style="text-decoration: none">Resume!</a></p><br><h3>soin.an@sjsu.edu<br>© Copyright Soin An. All Rights Reserved</p>
    </div><div class="column">
             <p><a href="https://drive.google.com/file/d/1yKP6Wr5qEm62AT5oiXWWEtA9xNwFP_9L/view?usp=sharing"
               style="text-decoration: none">Email</a>
