--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
       top: 0;
       font-family: "Karla", serif;
-      font-size: 8px;
+      font-size: 16px;
       font-weight: normal;
     }
 
@@ -212,7 +212,7 @@
 
           <li>
             <a
-              href="https://drive.google.com/file/d/1yKP6Wr5qEm62AT5oiXWWEtA9xNwFP_9L/view?usp=sharing"
+              href="https://drive.google.com/file/d/1ppQ-XzfhuOqEVOi4WtXX3FwdcxW1XrmB/view?usp=sharing"
               style="text-decoration: none"
               ><ul>RESUME</ul></a
             >
@@ -325,8 +325,8 @@
           <div class="row">
             
           <div class="column">
-           <p>Thank you for scrolling down. Here's My <a href="https://drive.google.com/file/d/1yKP6Wr5qEm62AT5oiXWWEtA9xNwFP_9L/view?usp=sharing"
-              style="text-decoration: none">Resume!</a></p><br><h3>soin.an@sjsu.edu<br>© Copyright Soin An. All Rights Reserved</p>
+           <p>Thank you for scrolling down. Here's My <a href="https://drive.google.com/file/d/1ppQ-XzfhuOqEVOi4WtXX3FwdcxW1XrmB/view?usp=sharing"
+              style="text-decoration: none">Resume!</a></p><br><p>soin.an@sjsu.edu<br>© Copyright Soin An. All Rights Reserved</p>
    </div><div class="column">
             <p><a href="https://drive.google.com/file/d/1yKP6Wr5qEm62AT5oiXWWEtA9xNwFP_9L/view?usp=sharing"
               style="text-decoration: none">Email</a>
