--- a/index.html
+++ b/index.html
@@ -321,7 +321,6 @@
   </body>
 <footer>
   <div class="footer">
-           <div class="section">
           <div class="row">
             
           <div class="column">
@@ -334,7 +333,7 @@
               style="text-decoration: none">LinkedIn</a>
             <a href="https://drive.google.com/file/d/1yKP6Wr5qEm62AT5oiXWWEtA9xNwFP_9L/view?usp=sharing"
               style="text-decoration: none">Instagram</a>
-            </p></div>
+            </p></div></div>
             </div></div></div>
-  </div> </footer>
+ </footer>
 </html>
