--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
       top: 0;
       font-family: "Karla", serif;
-      font-size: 16px;
+      font-size: 20px;
       font-weight: normal;
     }
 
@@ -180,7 +180,7 @@
     .footer{
     background-color: #EBECF0;
     width: 100%;
-
+padding: 10px;
     border-radius: 5px;
     text-align: left;
     font-weight: normal;
