--- a/index.html
+++ b/index.html
@@ -100,7 +100,13 @@
     h3 {
       font-style: normal;
       font-family: "Karla", serif;
-      font-color: #b10096;
+      font-weight: 400;
+      text-align: left;
+    }
+    h6 {
+      font-style: normal;
+      font-family: "Karla", serif;
+      font-color: #898989;
       font-weight: 400;
       text-align: left;
     }
@@ -239,7 +245,7 @@ padding: 25px;
            
               <h1>Hello, My name is Soin An. </h1>
             <p>
-              hello</p> <h3>hello</h3>
+              paragraph</p> <h3>h3</h3><h6>h6</h6>
             </div>
         
           <div class="column">
