--- a/index.html
+++ b/index.html
@@ -334,12 +334,12 @@ padding: 25px;
            <p>Thank you for scrolling down. Here's My <a href="https://drive.google.com/file/d/1ppQ-XzfhuOqEVOi4WtXX3FwdcxW1XrmB/view?usp=sharing"
               style="text-decoration: none">Resume!</a></p><br><p>soin.an@sjsu.edu<br>© Copyright Soin An. All Rights Reserved</p>
    </div><div class="column">
-            <p><a href="mailto:soin.an@sjsu.edu"> <img
+            <p><br><br><br><br><br><a href="mailto:soin.an@sjsu.edu"> <img
                   src="https://drive.google.com/file/d/1VMGx-KDsAweNMz0v-GIuSLuKlLWzBNwQ/view?usp=sharing"
                   width="100%"
                   alt="cow"
               />
-              </a><br>
+              </a>
             <a href="https://www.linkedin.com/in/soin-an-460851222/"
               > <img
                   src="https://drive.google.com/file/d/1QJXnrKYli9XK6BFxqpjZTkELjxOiVL_V/view?usp=sharing"
