--- a/index.html
+++ b/index.html
@@ -337,14 +337,14 @@ padding: 25px;
             <p><br><br><br><br><br><a href="mailto:soin.an@sjsu.edu"> <img
                   src="https://drive.google.com/file/d/1VMGx-KDsAweNMz0v-GIuSLuKlLWzBNwQ/view?usp=sharing"
                   width="100%"
-                  alt="cow"
+                  alt="email"
               />
               </a>
             <a href="https://www.linkedin.com/in/soin-an-460851222/"
               > <img
                   src="https://drive.google.com/file/d/1QJXnrKYli9XK6BFxqpjZTkELjxOiVL_V/view?usp=sharing"
                   width="100%"
-                  alt="cow"
+                  alt="linkedin"
               />
               </a>
          
