--- a/index.html
+++ b/index.html
@@ -90,18 +90,12 @@
     .active {
       color: #b10096;
     }
-    .greyh1 {font-color: #898989;
-
-      font-style: normal;
-      font-family: "Karla", serif;
-      font-weight: 400;
-      text-align: left;
-}
+  
 
     h1 {
       font-style: bold;
       font-family: "Karla", serif;
-      font-weight: 1000;
+      font-weight: 400;
       text-align: left;
     }
     h2 {
@@ -260,7 +254,7 @@ padding: 25px;
             
           <div class="column">
            
-            <h1> <span class="greyh1">Hello, I'm Soin An's website.</span></h1><br>
+            <h3>Hello, I'm Soin An's website.</h3><br>
              <h1>Soin is an Interaction Designer who designs digestive user experience.
            She is passionate at creating experiences in the metaverse.</h1>
             </div>
