--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     h6 {
       font-style: normal;
       font-family: "Karla", serif;
-      font-color: #989898;
+      font-color: #C6C6C6;
       font-weight: 400;
       text-align: left;
       font-size: 20px;
@@ -257,9 +257,10 @@ padding: 25px;
           <div class="row">
             
           <div class="column">
+            <h3>San Jose</h3>
             <h6>Hello, I'm Soin An's website.</h6>
-            <h1>Hello, I'm Soin An, an Interaction Designer who designs digestive user experience.</h1><br>
-           <h3>She is also passionate at creating experiences in the metaverse.</h3>
+            <h1>Soin is an Interaction Designer who designs digestive user experience.</h1><br>
+           Currently attending San Jose State University. <br>She is also passionate at creating experiences in the metaverse.
             </div>
         
           <div class="column">
