--- a/index.html
+++ b/index.html
@@ -257,7 +257,12 @@ padding: 25px;
           <div class="row">
             
           <div class="column">
-            <h3>San Jose</h3>
+            <h3> <img
+                  src="./resource/noun-location-5440274.png"
+                  width="100%"
+                  alt="location"
+              />
+              San Jose</h3>
             <h6>Hello, I'm Soin An's website.</h6>
             <h1>Soin is an Interaction Designer who designs digestive user experience.</h1><br>
            Currently attending San Jose State University. <br>She is also passionate at creating experiences in the metaverse.
@@ -350,14 +355,14 @@ padding: 25px;
              >Resume!</a></p><br><p>soin.an@sjsu.edu<br>© Copyright Soin An. All Rights Reserved</p>
    </div><div class="column">
             <p><br><br><br><br><a href="mailto:soin.an@sjsu.edu"> <img
-                  src="https://drive.google.com/file/d/1VMGx-KDsAweNMz0v-GIuSLuKlLWzBNwQ/view?usp=sharing"
+                  src="./resource/noun-email-5413032.png"
                   width="100%"
                   alt="email"
               />
               </a>
             <a href="https://www.linkedin.com/in/soin-an-460851222/"
               > <img
-                  src="https://drive.google.com/file/d/1QJXnrKYli9XK6BFxqpjZTkELjxOiVL_V/view?usp=sharing"
+                  src="./resource/Screenshot 2023-01-19 at 5.16.47 PM.png"
                   width="100%"
                   alt="linkedin"
               />
