--- a/index.html
+++ b/index.html
@@ -259,14 +259,14 @@ padding: 25px;
           <div class="column">
             <h3> <img
                   src="./resource/noun-location-5440274.png"
-                  width="100%"
+                  width="10%"
                   alt="location"
               />
               San Jose</h3>
             <h6>Hello, I'm Soin An's website.</h6>
-            <h1>Soin is an Interaction Designer who designs digestive user experience.</h1><br>
+            <h1>Soin is an Interaction Designer who designs digestive user experience.<br>
            Currently attending San Jose State University. <br>She is also passionate at creating experiences in the metaverse.
-            </div>
+           </h1> </div>
         
           <div class="column">
           <img
@@ -356,14 +356,14 @@ padding: 25px;
    </div><div class="column">
             <p><br><br><br><br><a href="mailto:soin.an@sjsu.edu"> <img
                   src="./resource/noun-email-5413032.png"
-                  width="100%"
+                  width="30%"
                   alt="email"
               />
               </a>
             <a href="https://www.linkedin.com/in/soin-an-460851222/"
               > <img
                   src="./resource/Screenshot 2023-01-19 at 5.16.47 PM.png"
-                  width="100%"
+                  width="30%"
                   alt="linkedin"
               />
               </a>
