--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@ padding: 25px;
           <div class="column">
             <h3> <img
                   src="./resource/noun-location-5440274.png"
-                  width="10%"
+                  width="3%"
                   alt="location"
               />
               San Jose</h3>
@@ -289,8 +289,9 @@ padding: 25px;
                 <img
                   src="./resource/uiux.png"
                   width="100%"
-                  alt="glitch"
+                  
               /></a>
+            <h2>Title</h2><h6>Subtitle</h6><h3>Paragraph</h3>
             </div>
            
           </div>
@@ -356,14 +357,14 @@ padding: 25px;
    </div><div class="column">
             <p><br><br><br><br><a href="mailto:soin.an@sjsu.edu"> <img
                   src="./resource/noun-email-5413032.png"
-                  width="30%"
+                  width="5%"
                   alt="email"
               />
               </a>
             <a href="https://www.linkedin.com/in/soin-an-460851222/"
               > <img
                   src="./resource/Screenshot 2023-01-19 at 5.16.47 PM.png"
-                  width="30%"
+                  width="5%"
                   alt="linkedin"
               />
               </a>
