--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@ padding: 25px;
         </div>
         <div class="section">
           <div class="row">
-            <div class="column">
+            <div class="column3">
               <a href="./whosdown.html" style="text-decoration: none"
                 ><img
                   src="./resource/whosdown.png"
@@ -306,7 +306,7 @@ padding: 25px;
                   alt="gif"
               /></a>
             </div>
-            <div class="column">
+            <div class="column7">
               <a href="./website.html" style="text-decoration: none">
                 <img
                   src="./resource/website_thumb.png"
