--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@ padding: 25px;
           <div class="column">
             <h3> <img
                   src="./resource/noun-location-5440274.png"
-                  width="3%"
+                  width="5%"
                   alt="location"
               />
               San Jose</h3>
@@ -354,21 +354,21 @@ padding: 25px;
           <div class="column">
            <p>Thank you for scrolling down. Here's My <a href="https://drive.google.com/file/d/1ppQ-XzfhuOqEVOi4WtXX3FwdcxW1XrmB/view?usp=sharing"
              >Resume!</a></p><br><p>soin.an@sjsu.edu<br>© Copyright Soin An. All Rights Reserved</p>
-   </div><div class="column">
-            <p><br><br><br><br><a href="mailto:soin.an@sjsu.edu"> <img
+   
+            <p><br><br><a href="mailto:soin.an@sjsu.edu"> <img
                   src="./resource/noun-email-5413032.png"
-                  width="5%"
+                  width="10%"
                   alt="email"
               />
               </a>
             <a href="https://www.linkedin.com/in/soin-an-460851222/"
               > <img
                   src="./resource/Screenshot 2023-01-19 at 5.16.47 PM.png"
-                  width="5%"
+                  width="10%"
                   alt="linkedin"
               />
-              </a>
-         
+              </a><br></p>
+         <p>© Copyright Soin An. All Rights Reserved
             </p></div></div>
             </div></div></div>
  </footer>
