--- a/index.html
+++ b/index.html
@@ -349,13 +349,11 @@ padding: 25px;
   </body>
 <footer>
   <div class="footer">
-          <div class="row">
-            
-          <div class="column">
+        
            <p>Thank you for scrolling down. Here's My <a href="https://drive.google.com/file/d/1ppQ-XzfhuOqEVOi4WtXX3FwdcxW1XrmB/view?usp=sharing"
-             >Resume!</a></p><br><p>soin.an@sjsu.edu<br>© Copyright Soin An. All Rights Reserved</p>
+                                                         >Resume!</a></p>
    
-            <p><br><br><a href="mailto:soin.an@sjsu.edu"> <img
+            <p><a href="mailto:soin.an@sjsu.edu"> <img
                   src="./resource/noun-email-5413032.png"
                   width="10%"
                   alt="email"
@@ -368,8 +366,8 @@ padding: 25px;
                   alt="linkedin"
               />
               </a><br></p>
-         <p>© Copyright Soin An. All Rights Reserved
-            </p></div></div>
-            </div></div></div>
+         <p>soin.an@sjsu.edu<br>© Copyright Soin An. All Rights Reserved
+            </p>
+            </div><
  </footer>
 </html>
