--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@ padding: 25px;
       <div class="section">
           <div class="row">
             
-          <div class="column">
+          <div class="column7">
             <h3> <img
                   src="./resource/noun-location-5440274.png"
                   width="5%"
@@ -265,10 +265,10 @@ padding: 25px;
               San Jose</h3>
             <h6>Hello, I'm Soin An's website.</h6>
             <h1>Soin is an Interaction Designer who designs digestive user experience.<br>
-           Currently attending San Jose State University. <br>She is also passionate at creating experiences in the metaverse.
+           Currently attending San Jose State University. <br>Passionate at creating experiences in the metaverse.
            </h1> </div>
         
-          <div class="column">
+          <div class="column3">
           <img
             src="./resource/landing.gif"
             width="100%"
@@ -299,12 +299,7 @@ padding: 25px;
         <div class="section">
           <div class="row">
             <div class="column3">
-              <a href="./whosdown.html" style="text-decoration: none"
-                ><img
-                  src="./resource/whosdown.png"
-                  width="100%"
-                  alt="gif"
-              /></a>
+              <h2>Title</h2><br><h6>Subtitle</h6><br><br><h3>Paragraph</h3>
             </div>
             <div class="column7">
               <a href="./website.html" style="text-decoration: none">
