--- a/index.html
+++ b/index.html
@@ -263,8 +263,8 @@ padding: 25px;
                   alt="location"
               />
               San Jose</h3>
-            <h6>Hello, I'm Soin An's website.</h6>
-            <h1>Soin is an Interaction Designer who designs digestive user experience.<br>
+            <h2>Hello! I'm Soin An.</h2>
+            <h1>I'm an Interaction Designer who designs digestive user experience.<br>
            Currently attending San Jose State University. <br>Passionate at creating experiences in the metaverse.
            </h1> </div>
         
@@ -291,7 +291,7 @@ padding: 25px;
                   width="100%"
                   alt="whosdown"
               /></a>
-              <h1>Title</h1><br><h6>Subtitle</h6><br><br><h3>Paragraph</h3>
+              <h1>Title</h1><h6>Subtitle</h6><h3>Paragraph</h3>
             </div>
             <div class="column">
               <a href="./drawings.html" style="text-decoration: none">
@@ -300,7 +300,7 @@ padding: 25px;
                   width="100%"
                   alt="cow"
               /></a>
-              <h1>Title</h1><br><h6>Subtitle</h6><br><br><h3>Paragraph</h3>
+              <h1>Title</h1><h6>Subtitle</h6><h3>Paragraph</h3>
             </div>
           </div>
         </div>
@@ -313,7 +313,7 @@ padding: 25px;
                   width="100%"
                   alt="whosdown"
               /></a>
-              <h1>Title</h1><br><h6>Subtitle</h6><br><br><h3>Paragraph</h3>
+              <h1>Title</h1><h6>Subtitle</h6><h3>Paragraph</h3>
             </div>
             <div class="column">
               <a href="./drawings.html" style="text-decoration: none">
@@ -322,7 +322,7 @@ padding: 25px;
                   width="100%"
                   alt="cow"
               /></a>
-              <h1>Title</h1><br><h6>Subtitle</h6><br><br><h3>Paragraph</h3>
+              <h1>Title</h1><h6>Subtitle</h6><h3>Paragraph</h3>
             </div>
           </div>
         </div>
@@ -344,21 +344,21 @@ padding: 25px;
            <p>Thank you for scrolling down. Here's My <a href="https://drive.google.com/file/d/1ppQ-XzfhuOqEVOi4WtXX3FwdcxW1XrmB/view?usp=sharing"
                                                          >Resume!</a></p>
    
-            <p><a href="mailto:soin.an@sjsu.edu"> <img
+            <a href="mailto:soin.an@sjsu.edu"> <img
                   src="./resource/noun-email-5413032.png"
-                  width="10%"
+                  width="5%"
                   alt="email"
               />
               </a>
             <a href="https://www.linkedin.com/in/soin-an-460851222/"
               > <img
                   src="./resource/Screenshot 2023-01-19 at 5.16.47 PM.png"
-                  width="10%"
+                  width="5%"
                   alt="linkedin"
               />
-              </a><br></p>
+              </a><br>
          <p>soin.an@sjsu.edu<br>© Copyright Soin An. All Rights Reserved
             </p>
-            </div><
+            </div>
  </footer>
 </html>
