--- a/index.html
+++ b/index.html
@@ -99,6 +99,11 @@
       text-align: left;
       font-size: 27px;
     }
+     h2 {
+
+      text-align: left;
+      
+    }
     h3 {
       font-style: normal;
       font-family: "Karla", serif;
@@ -353,7 +358,7 @@ padding: 25px;
             <a href="https://www.linkedin.com/in/soin-an-460851222/"
               > <img
                   src="./resource/Screenshot 2023-01-19 at 5.16.47 PM.png"
-                  width="5%"
+                  width="4%"
                   alt="linkedin"
               />
               </a><br>
