--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     }
    
    
-    h6 {
+    h5 {
       font-style: normal;
       font-family: "Karla", serif;
       font-color: #C6C6C6;
@@ -121,6 +121,7 @@
       text-align: left;
       font-size: 12px;
     }
+    
     p {
       font-style: normal;
       font-family: "Karla", sans-serif;
@@ -281,11 +282,7 @@ padding: 25px;
         </div></div>
 
         <div class="section">
-          <img
-            src="./resource/port2.png"
-            alt="portfolio line"
-            width="100%"
-          />
+          <h2>My Works</h2>
           </div>
             <div class="section">
           <div class="row">
@@ -296,7 +293,7 @@ padding: 25px;
                   width="100%"
                   alt="whosdown"
               /></a>
-              <h1>Title</h1><h6>Subtitle</h6><h3>Paragraph</h3>
+              <h2>Crosswalk Tic-tac-toe</h2><h5>AR Design, UX Design</h5><h3>Designed user experience for an AR device to improve users' social experience at Meta Reality Labs</h3>
             </div>
             <div class="column">
               <a href="./drawings.html" style="text-decoration: none">
@@ -305,7 +302,7 @@ padding: 25px;
                   width="100%"
                   alt="cow"
               /></a>
-              <h1>Title</h1><h6>Subtitle</h6><h3>Paragraph</h3>
+              <h2>Crosswalk Tic-tac-toe</h2><h5>AR Design, UX Design</h5><h3>Designed user experience for an AR device to improve users' social experience at Meta Reality Labs</h3>
             </div>
           </div>
         </div>
@@ -318,7 +315,7 @@ padding: 25px;
                   width="100%"
                   alt="whosdown"
               /></a>
-              <h1>Title</h1><h6>Subtitle</h6><h3>Paragraph</h3>
+              <h2>Crosswalk Tic-tac-toe</h2><h5>AR Design, UX Design</h5><h3>Designed user experience for an AR device to improve users' social experience at Meta Reality Labs</h3>
             </div>
             <div class="column">
               <a href="./drawings.html" style="text-decoration: none">
@@ -327,7 +324,7 @@ padding: 25px;
                   width="100%"
                   alt="cow"
               /></a>
-              <h1>Title</h1><h6>Subtitle</h6><h3>Paragraph</h3>
+              <h2>Crosswalk Tic-tac-toe</h2><h5>AR Design, UX Design</h5><h3>Designed user experience for an AR device to improve users' social experience at Meta Reality Labs</h3>
             </div>
           </div>
         </div>
