--- a/index.html
+++ b/index.html
@@ -110,16 +110,17 @@
       font-weight: 400;
       text-align: left;
       font-size: 20px;
+       font-color: #C6C6C6;
     }
    
    
-    h5 {
-      font-style: normal;
+    h4 {
+      font-style: bold;
       font-family: "Karla", serif;
       font-color: #C6C6C6;
       font-weight: 400;
       text-align: left;
-      font-size: 12px;
+      font-size: 14px;
     }
     
     p {
@@ -293,7 +294,7 @@ padding: 25px;
                   width="100%"
                   alt="whosdown"
               /></a>
-              <h2>Crosswalk Tic-tac-toe</h2><h5>AR Design, UX Design</h5><h3>Designed user experience for an AR device to improve users' social experience at Meta Reality Labs</h3>
+              <h2>Crosswalk Tic-tac-toe</h2><h4>AR Design, UX Design</h4><h3>Designed user experience for an AR device to improve users' social experience at Meta Reality Labs</h3>
             </div>
             <div class="column">
               <a href="./drawings.html" style="text-decoration: none">
@@ -302,7 +303,7 @@ padding: 25px;
                   width="100%"
                   alt="cow"
               /></a>
-              <h2>Crosswalk Tic-tac-toe</h2><h5>AR Design, UX Design</h5><h3>Designed user experience for an AR device to improve users' social experience at Meta Reality Labs</h3>
+              <h2>Crosswalk Tic-tac-toe</h2><h4>AR Design, UX Design</h4><h3>Designed user experience for an AR device to improve users' social experience at Meta Reality Labs</h3>
             </div>
           </div>
         </div>
@@ -315,7 +316,7 @@ padding: 25px;
                   width="100%"
                   alt="whosdown"
               /></a>
-              <h2>Crosswalk Tic-tac-toe</h2><h5>AR Design, UX Design</h5><h3>Designed user experience for an AR device to improve users' social experience at Meta Reality Labs</h3>
+              <h2>Crosswalk Tic-tac-toe</h2><h4>AR Design, UX Design</h4><h3>Designed user experience for an AR device to improve users' social experience at Meta Reality Labs</h3>
             </div>
             <div class="column">
               <a href="./drawings.html" style="text-decoration: none">
@@ -324,7 +325,7 @@ padding: 25px;
                   width="100%"
                   alt="cow"
               /></a>
-              <h2>Crosswalk Tic-tac-toe</h2><h5>AR Design, UX Design</h5><h3>Designed user experience for an AR device to improve users' social experience at Meta Reality Labs</h3>
+              <h2>Crosswalk Tic-tac-toe</h2><h4>AR Design, UX Design</h4><h3>Designed user experience for an AR device to improve users' social experience at Meta Reality Labs</h3>
             </div>
           </div>
         </div>
@@ -343,8 +344,7 @@ padding: 25px;
 <footer>
   <div class="footer">
         
-           <p>Thank you for scrolling down. Here's My <a href="https://drive.google.com/file/d/1ppQ-XzfhuOqEVOi4WtXX3FwdcxW1XrmB/view?usp=sharing"
-                                                         >Resume!</a></p>
+           <p>Thank you for scrolling down.<br> Here's My <a href="https://drive.google.com/file/d/1ppQ-XzfhuOqEVOi4WtXX3FwdcxW1XrmB/view?usp=sharing">Resume!</a></p>
    
             <a href="mailto:soin.an@sjsu.edu"> <img
                   src="./resource/noun-email-5413032.png"
