--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@ padding: 25px;
 
      
             <div class="section">
-              <h2>My Works</h2>
+              <hr><h2>My Works</h2>
           <div class="row">
             <div class="column">
                
