--- a/index.html
+++ b/index.html
@@ -215,6 +215,9 @@ padding: 25px;
     font-weight: normal;
        font-family: "Karla", sans-serif;
 }
+    hr {
+  width: 90%;
+}
 
   </style>
 
@@ -282,9 +285,8 @@ padding: 25px;
           />
         </div></div>
 
-     
+     <hr>
             <div class="section">
-              <hr><h2>My Works</h2>
           <div class="row">
             <div class="column">
                
