--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@ padding: 25px;
                   width="100%"
                   alt="tictactoe"
               /></a>
-              <h2>Crosswalk Tic-tac-toe</h2><h4>AR Design, UX Design</h4><h3>Designed user experience for an AR device to improve users' social experience at Meta Reality Labs</h3>
+              <h2>Crosswalk Tic-tac-toe</h2><h4>AR Design, UX Design, Case Study</h4><h3>Designed pedestrian user experience on the crosswalk using an AR prototype application.</h3>
             </div>
             <div class="column">
               <a href="./drawings.html" style="text-decoration: none">
@@ -305,7 +305,7 @@ padding: 25px;
                   width="100%"
                   alt="cow"
               /></a>
-              <h2>Crosswalk Tic-tac-toe</h2><h4>AR Design, UX Design</h4><h3>Designed user experience for an AR device to improve users' social experience at Meta Reality Labs</h3>
+              <h2>COW</h2><h4>UI Design, Team Project</h4><h3>Team project that delivers an easy-digestive restaurant review system for IOS mobile application.</h3>
             </div>
           </div>
         </div>
@@ -318,7 +318,7 @@ padding: 25px;
                   width="100%"
                   alt="whosdown"
               /></a>
-              <h2>Crosswalk Tic-tac-toe</h2><h4>AR Design, UX Design</h4><h3>Designed user experience for an AR device to improve users' social experience at Meta Reality Labs</h3>
+              <h2>Whos Down</h2><h4>Branding, Sponsored Project</h4><h3>Designed User Interface and branding for Real-time meet-up mobile application.</h3>
             </div>
             <div class="column">
               <a href="./drawings.html" style="text-decoration: none">
@@ -327,7 +327,7 @@ padding: 25px;
                   width="100%"
                   alt="uiuxquiz"
               /></a>
-              <h2>Crosswalk Tic-tac-toe</h2><h4>AR Design, UX Design</h4><h3>Designed user experience for an AR device to improve users' social experience at Meta Reality Labs</h3>
+              <h2>UI UX Quiz</h2><h4>HTML, CSS, Case Study</h4><h3>A case study that demonstrates basic information of user interface.</h3>
             </div>
           </div>
         </div>
