--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@ padding: 25px;
                   width="100%"
                   alt="cow"
               /></a>
-              <h2>COW</h2><h4>UI Design, Team Project</h4><h3>Team project that delivers an easy-digestive restaurant review system for IOS mobile application.</h3>
+              <h2>COW</h2><h4>UI Design, Team Project</h4><h3>Team project that delivers an easy-digestive restaurant review system using Instagram API.</h3>
             </div>
           </div>
         </div>
