--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@ padding: 25px;
                   width="10%"
                   alt="loca"
                      />San Jose, CA</p>
-              <p> <a href="mailto:soin.an@sjsu.edu"><img
+              <a href="mailto:soin.an@sjsu.edu"> <p><img
                   src="./resource/mail.png"
                   width="10%"
                   alt="mail"
