--- a/index.html
+++ b/index.html
@@ -355,14 +355,14 @@ padding: 25px;
                   width="10%"
                   alt="loca"
                      /> San Jose, CA</p>
-             <p> <a href="mailto:soin.an@sjsu.edu"> <img
+            <a href="mailto:soin.an@sjsu.edu">  <p> <img
                   src="./resource/mail.png"
                   width="10%"
                   alt="mail"
                     /></a> soin.an@sjsu.edu</p>
-               <p>  <a href="https://drive.google.com/file/d/1ppQ-XzfhuOqEVOi4WtXX3FwdcxW1XrmB/view?usp=sharing">
+                 <a href="https://drive.google.com/file/d/1ppQ-XzfhuOqEVOi4WtXX3FwdcxW1XrmB/view?usp=sharing">
               
-            <img
+            <p><img
                   src="./resource/resume.png"
                   width="10%"
                   alt="resume"
