--- a/index.html
+++ b/index.html
@@ -281,12 +281,12 @@ padding: 25px;
                   width="100%"
                   alt="tictactoe"
               /></a>
-              <h2>Crosswalk Tic-tac-toe</h2><h4>AR Design, UX Design, Case Study</h4><h3>Designed pedestrian user experience on the crosswalk using an AR prototype application.</h3>
+              <h2><br>Crosswalk Tic-tac-toe</h2><h4>AR Design, UX Design, Case Study</h4><h3>Designed pedestrian user experience on the crosswalk using an AR prototype application.</h3>
             </div>
             <div class="column">
               <a href="./cow.html" style="text-decoration: none">
                 <img
-                  src="./resource/cow3_thmb.jpg"
+                  src="./resource/cow2_thmb.jpg"
                   width="100%"
                   alt="cow"
               /></a>
@@ -303,7 +303,7 @@ padding: 25px;
                   width="100%"
                   alt="whosdown"
               /></a>
-              <h2>Whos Down</h2><h4>Branding, Sponsored Project</h4><h3>Designed User Interface and branding for Real-time meet-up mobile application.</h3>
+              <h2><br>Whos Down</h2><h4>Branding, Sponsored Project</h4><h3>Designed User Interface and branding for Real-time meet-up mobile application.</h3>
             </div>
             <div class="column">
               <a href="./uiux.html" style="text-decoration: none">
@@ -312,7 +312,7 @@ padding: 25px;
                   width="100%"
                   alt="uiuxquiz"
               /></a>
-              <h2>UI UX Quiz</h2><h4>HTML, CSS, Case Study</h4><h3>A case study that demonstrates basic information of user interface.</h3>
+              <h2><br>UI UX Quiz</h2><h4>HTML, CSS, Case Study</h4><h3>A case study that demonstrates basic information of user interface.</h3>
             </div>
           </div>
         </div>
