--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@ padding: 25px;
             <div class="column">
               <a href="./uiux.html" style="text-decoration: none">
                 <img
-                  src="./resource/quiz_thmb.jpg"
+                  src="./resource/quiz.jpg"
                   width="100%"
                   alt="uiuxquiz"
               /></a>
