--- a/cow.html
+++ b/cow.html
@@ -246,12 +246,32 @@ padding: 25px;
   </header>
 
   <!----body---->
+   <body>
+    <main role="main" class="container">
+      <div class="section">
+           <img
+              src="./resource/whosline.png"
+              alt="portfolio line"
+              width="100%"
+                 />
+        <div class="row">
+          <img
+            src="./resource/wdpage.jpg"
+            width="100%"
+          />
+        </div></div>
+       
+    </main>
+  
+  <!----boostrap---->
+
    <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
       crossorigin="anonymous"
     ></script>
   </body>
+
 <footer>
  <div class="footer">
     <div class="section">
