--- a/tictactoe.html
+++ b/tictactoe.html
@@ -261,7 +261,7 @@ padding: 25px;
           />
         </div></div>
        
-    </main></body>
+    </main>
     
     <!--bootsratp-->
     <script
