--- a/tictactoe.html
+++ b/tictactoe.html
@@ -251,7 +251,7 @@ padding: 25px;
       <div class="section">
         <div class="row">
            <img
-              src="./tic_thmb.jpg"
+              src="./resource/tic_thmb.jpg"
               alt="tictactoegif"
               width="100%"
                  />
@@ -263,7 +263,7 @@ padding: 25px;
               src="./resource/tic21.jpg" width="100%"
                  />
           <img
-              src="./resource/tic2-2.gif" width="200%"
+              src="./resource/tic22.gif" width="200%"
                  />
           <img
               src="./resource/tic3.jpg" width="100%"
